# adc-fast-reader

./: .gitignore  CMakeLists.txt  readme.md
conf/: adcrf.service
include/: rpi_dma_utils.h
src/: rpi_adc_stream.c
